# rag-assistant

./: .env.example  .gitignore  README.md  compose.yaml
backend/: pyproject.toml
backend/app/: __init__.py  main.py
data/: README.md
data/personal/: andor_health.md  behavioral_stories.md  projects.md  resimplifi.md  resume.md  technical_notes.md
data/personal/interview_preparation/: ai_engineering.md  forward_deployed_engineering.md
data/style/: banned_phrases.md  feedback_log.md  writing_preferences.md
docs/: ARCHITECTURE.md  DEVELOPMENT.md  FEATURES.md  ROADMAP.md
frontend/src/app/: globals.css  layout.tsx  page.tsx
